--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,6 +12,7 @@
             data-sap-ui-compatVersion="edge"
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-async="true"
+            data-sap-ui-bindingSyntax="complex"
 			data-sap-ui-preload="async"
             data-sap-ui-frameOptions="trusted"
         ></script>
