--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,6 +16,7 @@
 			data-sap-ui-preload="async"
             data-sap-ui-frameOptions="trusted"
         ></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body class="sapUiBody">
         <div
