--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>tracking-processos-frontend</title>
+        <title>Tracking Processos Ariba</title>
         <script
             id="sap-ui-bootstrap"
             src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
@@ -17,6 +17,7 @@
             data-sap-ui-frameOptions="trusted"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <link rel="icon" href="./img/brf.ico">
     </head>
     <body class="sapUiBody">
         <div
